<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FileManipulatorDineyWankhede</string>
    <string name="display">Contents of the FILE</string>
    <string name="EnterSomeText">Enter Some Text Here</string>
    <string name="action_settings">Settings</string>
    <string name="read">READ</string>
    <string name="append">APPEND</string>
    <string name="replace">REPLACE</string>

</resources>
